@@ -5,14 +5,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableMap;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiResponse;
 import io.swagger.annotations.ApiResponses;
 import no.nav.melosys.domain.Lovvalgsperiode;
 import no.nav.melosys.service.LovvalgsperiodeService;
-import no.nav.melosys.service.tilgang.TilgangService;
+import no.nav.melosys.service.tilgang.Aksesskontroll;
 import no.nav.melosys.tjenester.gui.dto.periode.LovvalgsperiodeDto;
 import no.nav.melosys.tjenester.gui.dto.periode.PeriodeDto;
 import no.nav.security.token.support.core.api.Protected;
@@ -29,21 +28,20 @@ import org.springframework.web.context.WebApplicationContext;
 public class LovvalgsperiodeTjeneste {
 
     private final LovvalgsperiodeService lovvalgsperiodeService;
-    private final TilgangService tilgangService;
+    private final Aksesskontroll aksesskontroll;
 
-    public LovvalgsperiodeTjeneste(LovvalgsperiodeService lovvalgsperiodeService, TilgangService tilgangService) {
-        super();
+    public LovvalgsperiodeTjeneste(LovvalgsperiodeService lovvalgsperiodeService, Aksesskontroll aksesskontroll) {
         this.lovvalgsperiodeService = lovvalgsperiodeService;
-        this.tilgangService = tilgangService;
+        this.aksesskontroll = aksesskontroll;
     }
 
     @GetMapping("{behandlingID}")
     @ApiOperation(value = "Henter en lovvalgsperiode for en gitt behandling", response = LovvalgsperiodeDto.class)
     @ApiResponses({ @ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.") })
-    public ResponseEntity hentLovvalgsperioder(@PathVariable("behandlingID") long behandlingsid) {
-        tilgangService.sjekkTilgang(behandlingsid);
+    public ResponseEntity hentLovvalgsperioder(@PathVariable("behandlingID") long behandlingID) {
+        aksesskontroll.autoriser(behandlingID);
         Collection<LovvalgsperiodeDto> resultat = lovvalgsperiodeService
-                .hentLovvalgsperioder(behandlingsid)
+                .hentLovvalgsperioder(behandlingID)
                 .stream()
                 .map(LovvalgsperiodeDto::av)
                 .collect(Collectors.toList());
@@ -55,7 +53,7 @@ public class LovvalgsperiodeTjeneste {
     @ApiResponses({ @ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.") })
     public Collection<LovvalgsperiodeDto> lagreLovvalgsperioder(@PathVariable("behandlingID") long behandlingsid,
             @RequestBody Collection<LovvalgsperiodeDto> lovvalgsperiodeDtoer) {
-        tilgangService.sjekkRedigerbarOgTilgang(behandlingsid);
+        aksesskontroll.autoriserSkriv(behandlingsid);
         List<Lovvalgsperiode> lovvalgsperioder = lovvalgsperiodeDtoer.stream()
                 .map(LovvalgsperiodeDto::til)
                 .collect(Collectors.toList());
@@ -66,10 +64,10 @@ public class LovvalgsperiodeTjeneste {
     @GetMapping("{behandlingID}/opprinnelig")
     @ApiOperation(value = "Henter den opprinnelig lovvalgsperioden en replikert avsluttet behandling har", response = LovvalgsperiodeDto.class)
     @ApiResponses({ @ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.") })
-    public Map<String, PeriodeDto> hentOpprinneligLovvalgsperiode(@PathVariable("behandlingID") long behandlingsid) {
-        tilgangService.sjekkTilgang(behandlingsid);
-        Lovvalgsperiode lovvalgsperiode = lovvalgsperiodeService.hentOpprinneligLovvalgsperiode(behandlingsid);
-        PeriodeDto periodeDto = new PeriodeDto(lovvalgsperiode.getFom(), lovvalgsperiode.getTom());
-        return ImmutableMap.of("opprinneligLovvalgsperiode", periodeDto);
+    public Map<String, PeriodeDto> hentOpprinneligLovvalgsperiode(@PathVariable("behandlingID") long behandlingID) {
+        aksesskontroll.autoriser(behandlingID);
+        var lovvalgsperiode = lovvalgsperiodeService.hentOpprinneligLovvalgsperiode(behandlingID);
+        var periodeDto = new PeriodeDto(lovvalgsperiode.getFom(), lovvalgsperiode.getTom());
+        return Map.of("opprinneligLovvalgsperiode", periodeDto);
     }
 }
